2008-02-05  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix critical when using interface
	  properties

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaexpression.vala,
	  vala/valapropertyaccessor.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegenerator.vala: add support for private property
	  accessors

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala, vala/valapropertyaccessor.vala: build
	  control flow graph for property accessors

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala: remove unreachable
	  return statements

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala: assume that control flow ends when
	  invoking a method with the [NoReturn] attribute

	* vapi/glib-2.0.vapi: add [NoReturn] to assert_not_reached

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: set tree_can_fail for assignments
	  that can fail

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala, vala/valaforstatement.vala,
	  vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  support for statements without condition, fixes bug 514548

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valapointertype.vala, vala/valasemanticanalyzer.vala: support
	  addressof expressions for reference types, fixes bug 514495

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix crash when casting an invalid
	  expression, fixes bug 514331

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valastruct.vala: improve error reporting
	  for methods missing the return type, fixes bug 514344

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix error message for invalid
	  symbols, fixes bug 514329

2008-02-05  Jürg Billeter  <j@bitron.ch>
